fix profile text wrapping

--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -102,7 +102,7 @@
     background: $white
     cursor: pointer
     text-align: right
-    width: 100%
+    width: 300px
 
     .text, img
       display: inline-block
